style.css
/* ... */
/*--------------------------------------------------------------
# Abstracts
--------------------------------------------------------------*/
/* Import variables and mixins.
--------------------------------------------- */
body {
	--color--gray: #888888;
	--color--light--primary: #9bc8da;
	--color--primary: var(--cm-color-1, #207daf);
}

/*--------------------------------------------------------------
# Generic
--------------------------------------------------------------*/
/* Normalize
--------------------------------------------- */
/*--------------------------------------------------------------
1.0 Reset browser defaults.
---------------------------------------------------------------*/
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
font,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td {
	border: 0;
	font: inherit;
	font-size: 100%;
	font-style: inherit;
	font-weight: inherit;
	margin: 0;
	outline: 0;
	padding: 0;
	vertical-align: baseline;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
nav,
section {
	display: block;
}

ol, ul {
	list-style: none;
}

th, td, .wp-block-table th, .wp-block-table td {
	border: 1px solid var(--cm-color-8, #E4E4E7);
	padding: 6px 10px;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: "";
}

blockquote, q {
	quotes: "" "";
}

a:focus {
	outline: thin dotted;
}

a:hover,
a:active {
	/* Improves readability when focused and also mouse hovered in all browsers people.opera.com/patrickl/experiments/keyboard/test */
	outline: 0;
}

a img {
	border: 0;
}

embed, iframe, object {
	max-width: 100%;
}

/* Superscript and Subscript.
--------------------------------------------- */
sup,
sub {
	font-size: 10px;
	height: 0;
	line-height: 1;
	position: relative;
	vertical-align: baseline;
}

sup {
	bottom: 1ex;
}

sub {
	top: 0.5ex;
}

/* Inherit box-sizing to more easily change it's value on a component level.
@link http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
*,
*::before,
*::after {
	box-sizing: inherit;
}

html {
	overflow-y: scroll;
	/* Keeps page centred in all browsers regardless of content height */
	-webkit-text-size-adjust: 100%;
	/* Prevents iOS text size adjust after orientation change, without disabling user zoom */
	-ms-text-size-adjust: 100%;
	/* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
}

/*--------------------------------------------------------------
# Base
--------------------------------------------------------------*/
/* Container
--------------------------------------------- */
/**
 * Container.
 */
.inner-wrap {
	margin: 0 auto;
	max-width: 1140px;
}

.cm-container {
	max-width: 1140px;
	margin-left: auto;
	margin-right: auto;
	padding-left: 16px;
	padding-right: 16px;
	box-sizing: content-box;
}

.cm-header-1 .cm-row {
	display: flex;
	flex-direction: column;
	justify-content: center;
	text-align: center;
	align-items: center;
	gap: 10px;
	padding: 24px 0;
}

@media screen and (min-width: 48em) {
	.cm-header-1 .cm-row {
		flex-direction: row;
		justify-content: space-between;
		text-align: left;
		gap: 20px;
	}
}

/* Typography
--------------------------------------------- */
html {
	font-size: 62.5%;
	/* Sets base font size to 10px */
}

body,
button,
input,
select,
textarea {
	color: #3f3f46;
	font-size: 16px;
	font-family: "Open Sans", serif;
	line-height: 1.8;
	word-wrap: break-word;
}

p {
	margin-bottom: 16px;
	line-height: 1.8;
	word-break: break-word;
}

strong {
	font-weight: 600;
}

cite,
em,
i {
	font-style: italic;
}

pre {
	overflow: auto;
	max-width: 100%;
	width: 798px;
	margin-bottom: 20px;
	padding: 30px 30px 84px 30px;
	background-color: #fafafa;
	font-size: 1.4rem;
	font-style: italic;
	line-height: 1.7;
}

code,
kbd,
var,
samp,
tt {
	font-family: "Courier 10 Pitch", Courier, monospace;
	font-size: 1.4rem;
	line-height: 1.4;
	white-space: pre-wrap;
}

abbr,
acronym,
dfn {
	border-bottom: 1px dotted var(--cm-color-9, #d4d4d8);
	cursor: help;
}

address {
	display: block;
	font-style: italic;
	margin: 0 0 16px;
}

ins {
	background: #f4f4f5;
}

hr,
.wp-block-separator {
	background-color: #e4e4e7;
	border: 0;
	height: 1px;
	margin: 30px 0;
}

dl {
	font-size: 1.6rem;
}

dt {
	font-weight: bold;
	margin-bottom: 4px;
}

dd {
	margin-bottom: 24px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin-bottom: 20px;
	color: #27272a;
	font-weight: 500;
	font-family: "Open Sans", sans-serif;
	line-height: 1.3;
}

h1 {
	font-size: 4rem;
}

h2 {
	font-size: 3.2rem;
}

h3 {
	font-size: 3.2rem;
}

h4 {
	font-size: 2rem;
}

h5 {
	font-size: 1.8rem;
}

h6 {
	font-size: 1.6rem;
}

/* Elements
--------------------------------------------- */
/**
 * Body.
 */
body {
	background-color: var(--cm-color-3, #E4E4E7);
	padding-top: 10px;
	padding-bottom: 10px;
	background-size: cover;
}

body.boxed {
	background-color: #E4E4E7;
}

body #page {
	display: flex;
	flex-direction: column;
	min-height: calc(100vh - var(--wp-admin--admin-bar--height, 0px));
}

body .cm-content {
	flex-grow: 1;
}

body.clickable-background-image {
	position: relative;
}

body.clickable-background-image .background-image-clickable {
	position: absolute;
	display: block;
	width: 100%;
	height: 100%;
	z-index: 1;
	cursor: pointer;
}

body.clickable-background-image .site {
	position: relative;
	z-index: 99;
}

button,
input[type="button"],
input[type="reset"],
input[type="submit"],
.wp-block-button .wp-block-button__link,
.wp-element-button,
.cm-button {
	display: inline-block;
	padding: 6px 10px;
	background-color: var(--cm-color-1, #207daf);
	color: #fff;
	font-size: 16px;
	font-weight: 600;
	border: 1px solid var(--cm-color-1, #207daf);
	transition: background-color 0.3s linear 0s;
	border-radius: 2px;
	cursor: pointer;
}
/* ... */

